# rustbot

./: .env  Cargo.toml
src/: commands.rs  main.rs
src/commands/general/: mod.rs  say.rs
