[package]
name = "rustbot"
version = "0.1.0"
authors = ["Keanu <keanutimmermans8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = { version = "0.9", features = ["framework"] }
tokio = { version = "0.2", features = ["macros"] }
